tests/bug_detector_tests/strictModeR1.test
################################################################################
#    Copyright (c) 2013, KAIST.
#    All rights reserved.
#
#    Use is subject to license terms.
#
#    This distribution may include materials developed by third parties.
################################################################################
tests=strictModeR1
BUGDETECTOR_TESTS_DIR=${JS_HOME}/tests/bug_detector_tests
bug-detector
bug-detector_out_WCIequals=\
 \n\
* Bug Detector * \n\
strictModeR1.js:4:5~4:15: [Warning] 'implements' is classified as FutureReservedWord token within strict mode code. \n\
strictModeR1.js:4:17~4:26: [Warning] 'interface' is classified as FutureReservedWord token within strict mode code. \n\
strictModeR1.js:4:28~4:31: [Warning] 'let' is classified as FutureReservedWord token within strict mode code. \n\
strictModeR1.js:4:33~4:40: [Warning] 'package' is classified as FutureReservedWord token within strict mode code. \n\
strictModeR1.js:4:42~4:49: [Warning] 'private' is classified as FutureReservedWord token within strict mode code. \n\
strictModeR1.js:4:51~4:60: [Warning] 'protected' is classified as FutureReservedWord token within strict mode code. \n\
strictModeR1.js:4:62~4:68: [Warning] 'public' is classified as FutureReservedWord token within strict mode code. \n\
strictModeR1.js:4:70~4:76: [Warning] 'static' is classified as FutureReservedWord token within strict mode code. \n\
strictModeR1.js:4:78~4:83: [Warning] 'yield' is classified as FutureReservedWord token within strict mode code. \n\
 \n\
============== Total Count ============== \n\
|  RangeErrors       :      0 (  0.00%) | \n\
|  ReferenceErrors   :      0 (  0.00%) | \n\
|  SyntaxErrors      :      0 (  0.00%) | \n\
|  TypeErrors        :      0 (  0.00%) | \n\
|  URIErrors         :      0 (  0.00%) | \n\
|  Warnings          :      9 (100.00%) | \n\
========================================= \n\
============ Statistics ============= \n\
|  AbsentRead              :      0 | \n\
|  BinaryOperator          :      0 | \n\
|  BuiltinTypeError        :      0 | \n\
|  BuiltinWrongArgType     :      0 | \n\
|  CallConstFunc           :      0 | \n\
|  CallNonConstructor      :      0 | \n\
|  CallNonFunction         :      0 | \n\
|  ConditionalBranch       :      0 | \n\
|  ConvertToNumber         :      0 | \n\
|  DefaultValue            :      0 | \n\
|  Deprecated              :      0 | \n\
|  FunctionArgSize         :      0 | \n\
|  GlobalThis              :      0 | \n\
|  ImplicitTypeConversion  :      0 | \n\
|  AccessingNullOrUndef    :      0 | \n\
|  PrimitiveToObject       :      0 | \n\
|  RangeError              :      0 | \n\
|  Shadowing               :      0 | \n\
|  StrictMode              :      9 | \n\
|  UncalledFunction        :      0 | \n\
|  UnreachableCode         :      0 | \n\
|  ValueNeverRead          :      0 | \n\
|  VaryingTypeArguments    :      0 | \n\
|  WrongThisType           :      0 | \n\
|  RegularExpression       :      0 | \n\
|  WrongArgument           :      0 | \n\
===================================== \n\
\n
bug-detector_err_equals=
