tests/bug_detector_tests/strictModeR1.js
"use strict";

// [R1]
var implements, interface, let, package, private, protected, public, static, yield;

function notStrict() {
    // [R1]
    var implements, interface, let, package, private, protected, public, static, yield;
}

notStrict();
